[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/misc/item_pouch.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/UI/hotbar.png" type="Texture" id=3]
[ext_resource path="res://scripts/ui/InventoryUI.gd" type="Script" id=4]
[ext_resource path="res://assets/misc/common_monster_dust.png" type="Texture" id=5]
[ext_resource path="res://assets/misc/goblin_scales.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/icon_empty.png" type="Texture" id=7]
[ext_resource path="res://assets/misc/bat_wings.png" type="Texture" id=8]
[ext_resource path="res://assets/misc/sweet_herbs.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[node name="InventoryUI" type="CanvasLayer"]
layer = 0

[node name="Bag" type="Control" parent="."]
anchor_left = 0.956
anchor_top = 0.072
anchor_right = 0.956
anchor_bottom = 0.072
margin_left = -1032.48
margin_top = -51.84
margin_right = -992.48
margin_bottom = -11.84

[node name="BagSprite" type="Sprite" parent="Bag"]
position = Vector2( 1036, 65 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="KeybindSprite" type="Sprite" parent="Bag"]
position = Vector2( 1030, 25 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="Keybind" type="Label" parent="Bag"]
anchor_left = -3.732
anchor_right = -3.732
margin_left = 1161.7
margin_top = 8.11485
margin_right = 1204.7
margin_bottom = 56.1149
rect_scale = Vector2( 0.75, 0.75 )
custom_colors/font_color = Color( 0.192157, 0.372549, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "I"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
visible = false
anchor_left = 0.486
anchor_top = 0.221
anchor_right = 0.486
anchor_bottom = 0.221
margin_left = -524.88
margin_top = -159.12
margin_right = -484.88
margin_bottom = -119.12
script = ExtResource( 4 )

[node name="CommonMonsterDust" type="Control" parent="Control"]
margin_left = 147.0
margin_top = 15.0
margin_right = 187.0
margin_bottom = 55.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Control/CommonMonsterDust"]
margin_left = 373.0
margin_top = 117.281
margin_right = 389.0
margin_bottom = 133.281
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/CommonMonsterDust"]
margin_left = 381.893
margin_top = 120.832
margin_right = 397.893
margin_bottom = 137.833
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Control/CommonMonsterDust"]
anchor_left = -3.732
anchor_right = -3.732
margin_left = 553.704
margin_top = 153.343
margin_right = 596.704
margin_bottom = 201.343
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoblinScales" type="Control" parent="Control"]
margin_left = 147.0
margin_top = 15.0
margin_right = 187.0
margin_bottom = 55.0

[node name="TextureRect2" type="TextureRect" parent="Control/GoblinScales"]
margin_left = 436.918
margin_top = 117.0
margin_right = 452.918
margin_bottom = 133.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="Control/GoblinScales"]
margin_left = 444.89
margin_top = 126.319
margin_right = 460.89
margin_bottom = 143.319
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/GoblinScales"]
anchor_left = -3.732
anchor_right = -3.732
margin_left = 615.816
margin_top = 153.343
margin_right = 665.816
margin_bottom = 201.343
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BatWings" type="Control" parent="Control"]
margin_left = 147.0
margin_top = 15.0
margin_right = 187.0
margin_bottom = 55.0

[node name="TextureRect2" type="TextureRect" parent="Control/BatWings"]
margin_left = 501.0
margin_top = 117.0
margin_right = 517.0
margin_bottom = 133.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="Control/BatWings"]
margin_left = 508.972
margin_top = 126.319
margin_right = 524.972
margin_bottom = 143.319
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/BatWings"]
anchor_left = -3.732
anchor_right = -3.732
margin_left = 679.898
margin_top = 153.343
margin_right = 729.898
margin_bottom = 201.343
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SweetHerbs" type="Control" parent="Control"]
margin_left = 147.0
margin_top = 15.0
margin_right = 187.0
margin_bottom = 55.0

[node name="TextureRect2" type="TextureRect" parent="Control/SweetHerbs"]
margin_left = 565.0
margin_top = 117.0
margin_right = 581.0
margin_bottom = 133.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="Control/SweetHerbs"]
margin_left = 572.972
margin_top = 126.319
margin_right = 588.972
margin_bottom = 143.319
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/SweetHerbs"]
anchor_left = -3.732
anchor_right = -3.732
margin_left = 743.898
margin_top = 153.343
margin_right = 793.898
margin_bottom = 201.343
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
